--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/passport": "^1.0.16",
+    "@types/passport-discord": "^0.1.11",
     "dotenv": "^16.4.1",
     "nodemon": "^3.0.3",
     "ts-node": "^10.9.2",
@@ -24,6 +26,8 @@
     "@types/express-session": "^1.17.10",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "express-session": "^1.18.0"
+    "express-session": "^1.18.0",
+    "passport": "^0.7.0",
+    "passport-discord": "^0.1.4"
   }
 }
