--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
+    "mongoose": "^8.1.1",
     "passport": "^0.7.0",
     "passport-discord": "^0.1.4"
   }
