--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "@types/express-session": "^1.17.10",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-session": "^1.18.0",
