--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express-session": "^1.17.10",
+    "axios": "^1.6.7",
     "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
